namespace Domain.Enums
{
    public enum TaskStatus
    {
        Todo, InProgress, Done
    }
}
