namespace WebApi.Middleware
{
    public class RequestLoggingMiddleware
    {
    }
}
